# C_Programming

./: .gitattributes  DES  Read_name.md  file_list.txt  print.py
Cmake/: CmakeLists.txt  Makefile  build.bat  output.txt  run.bat
Cmake/day1/: CMakeLists.txt  build.bat  main.c
Cmake/day1/Step1_build/: CMakeCache.txt
Referemce/: Driver GPIO.pptx  README.md  dichbit.dart
day1/: day1.cpp
day10/: acsii.c
day11/: permutation.c  permutation1.c  permutation2.c  permutation3.c
day12/: if1.c  if_else_long_nahu.c  t1.c
day13/: bt1.c  day13.c  t1.c
day14/: for.c  for1.c
day15/: bt_for.c
day16/: sum.c
day17/: so_nguyen_to.c
day18/: loop.c
day19/: loop1.c
day20/: 1for.c  2for.c  for.c
day21/: do-while.c  for.c  while.c
day22/: misc.c
day23/: break.c  continue.c
day24/: switch.c  switch_statement.c
day25/: prime_factor.c  t1.c
day26/: Reverce.c  pointer.c
day27/: abs_pabs.c  exp.c  log.c  pow.c  sin.c  sqrt.c
day28/: word_definition.c
day29/: min_max_three_number.c
day3/: day3.c
day30/: void.c
day31/: RECUSION.C
day32/: returnangexit.c
day33/: arr.c
day34/: array.c  func_array.c
day35/: test.c
day36/: arr_old_even.c  t1.c
day37/: arrminmax.c
day38/: pos_arr.c
day39/: sort_aray.c
day40/: fileh.c  test.txt
day41/: 4_09.c  NOT_VOLATILE.C  new.c  ptr3.c  ptr_to_ptr.c  rectang.c  stack.cpp  t2.c
day42/: 4_09.c
day5/: Variables_Contants.c
day6/: Data_types.c  transo.c
day7/: day7.c
day8/: Atithmetic_Opearors.c
day9/: Asignment_operator.c  Relational_qperator.c  increment_decrement.c  logic_operator.c
(+450 files in other folders)
